Fixed add cube Fn, fixed several spacing styles

--- a/app/styles/modules/_menu.scss
+++ b/app/styles/modules/_menu.scss
@@ -10,6 +10,7 @@
 .menu__list__item {
   @extend .button;
   width: 100%;
+  margin: .5rem 0;
   box-sizing: border-box;
   list-style: none;
 }
